# retroplayer

./: .gitignore  IMPLEMENTATION_REPORT.md  MODULAR_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  app.js  index.html  package-lock.json  package.json
public/: index.html  main.js  script.js  spotifyToken.js  style.css
public/modules/: constants.js  domElements.js  playerController.js  playlistManager.js  queueManager.js  searchManager.js  tokenManager.js  uiHelpers.js  volumeManager.js
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/server/: api.rs  mod.rs  spotify_web_player.rs
src/modules/: constants.js  lyricsManager.js  playerController.js  tokenManager.js
ui/: index.html
ui/src/: main.js  spotifyToken.js  style.css
ui/src/modules/: domElements.js  playerController.js  playlistManager.js  queueManager.js  searchManager.js  uiHelpers.js  volumeManager.js
